Enhance restaurant availability feature with dynamic time slot retrieval